--- a/charts.html
+++ b/charts.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="ru">
+<!DOCTYPE html> 
+<html lang="ru">   
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,7 +35,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.6.0/dist/echarts.min.js"></script>
+    <script src="database.js"></script>
     <script src="charts.js"></script>
 
 </body>
-</html> 
+</html>
