--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="ru"> 
-<head>
+<html lang="ru">
+<head>    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Система управления финансами</title>
@@ -71,6 +71,7 @@
             </form>
         </div>
     </div>
+    <script src="database.js"></script>
     <script src="finance.js"></script>
 </body>
 </html>
